Fixes Layout Issues UI Adjustments (Fonts Added, Profile Background Changed)

--- a/public/grad/grad-style.css
+++ b/public/grad/grad-style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Poppins;
+    src: url('fonts/Poppins-SemiBold.ttf');
+}
+
 .image-background {
     background-image: conic-gradient(hsl(116, 0%, 72%),hsl(116, 0%, 72%));
 
@@ -157,7 +162,14 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .gradTitle {
     font-size: 60pt;
+    margin-bottom: 8px;
+    font-family: Poppins, serif;
+}
+
+.gradDescription {
+    font-size: 40pt;
     margin-bottom: 15px;
+    font-family: Poppins, serif;
 }
 
 .cellName {
